--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,9 @@
     </string>
     <string name="loading">Loading…</string>
     <string name="auth_code_fmt">Auth Code: %s</string>
+    <string name="welcome_fmt">Welcome, %s</string>
     <string name="id_token_fmt">ID Token: %s</string>
+    <string name="error_fmt">Error: %s</string>
 
     <!-- Google Play Services error for Toast -->
     <string name="play_services_error_fmt">Google Play Services Error: %i</string>
